--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -2,21 +2,22 @@
     margin-top: 80px;
     background-color: #F0F4F8;
     color: #333;
-    padding: 5rem -1rem;
+    padding: 5rem 1rem;
     text-align: center;
 }
 
 .hero-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
 }
 
 .hero-content{
+    flex: 1;
     max-width: 600px;
-    margin-bottom: 2rem;
+    margin-right: 2rem;
 }
 
 .hero-content p{
@@ -29,7 +30,6 @@
     font-size: 2rem;
     color: #222;
     margin: 1rem 0;
-    animation: fadeIn 2s ease-in-out;
 }
 
 .hero-content button.cta-button{
@@ -49,15 +49,38 @@
     box-shadow: 0 4px 12px rgba(0, 91, 255, 0.3);
 }
 
+.hero-image {
+    flex: 1;
+    text-align: right;
+  }
+
 .hero-image img{
     max-width: 100%;
-    height: auto;
+    height: 400px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-    animation: bounce 2s infinite;
 }
 
-@keyframes fadeIn{
-  0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
-  40% { transform: translateY(-10px); }
-  60% { transform: translateY(-5px); }
-}
+
+ 
+@media (max-width: 767px) {
+    .hero-container {
+      flex-direction: column-reverse; /* Image en haut et contenu en bas pour les mobiles */
+      align-items: center;
+    }
+  
+    .hero-content {
+      text-align: center;
+      margin: 0;
+    }
+  
+    .hero-image {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+  
+    .hero-image img {
+      width: 80%;
+      height: auto;
+      margin: 0 auto;
+    }
+  } 
