--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,4 +1,5 @@
 #hero{
+    border-radius: 15px;
     margin-top: 80px;
     background-color: #F0F4F8;
     color: #333;
@@ -49,14 +50,16 @@
     box-shadow: 0 4px 12px rgba(0, 91, 255, 0.3);
 }
 
-.hero-image {
+.hero-image { 
     flex: 1;
     text-align: right;
   }
 
 .hero-image img{
+    border-top-right-radius: 80px;
+    border-bottom-left-radius: 80px;
     max-width: 100%;
-    height: 400px;
+    height: 350px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 }
 
