configuration du composant projets

--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,6 +1,6 @@
 #hero{
     border-radius: 15px;
-    margin-top: 80px;
+    margin: 80px 12px 0px 12px;
     background-color: #F0F4F8;
     color: #333;
     padding: 5rem 1rem;
