--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,5 +1,5 @@
 .skills-section {
-    margin-top: 45px;
+    margin: 45px 12px 0px 12px;
     padding: 50px 0;
     background-color: #f9f9f9; 
     border-radius: 15px;
