Réajustement des composant

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -30,7 +30,7 @@
   
   .footer a {
     color: #ecf0f1;
-    text-decoration: none;
+    text-decoration: underline;
     transition: color 0.3s;
   }
   
