--- a/src/components/Projects/project.css
+++ b/src/components/Projects/project.css
@@ -1,13 +1,24 @@
 #projects {
     margin: 45px 12px 0px 12px;
     border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.8rem 2rem;
+    background-color: #f5f5f5;
+}
+
+.title-container {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.projects-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
-    padding: 4rem 2rem;
-    background-color: #f5f5f5;
-    transform-style: preserve-3d;
-    perspective: 1000px;
+    width: 100%;
 }
 
 .project-card {
@@ -46,7 +57,16 @@
 }
 
 @media (max-width: 768px) {
+
     #projects {
+        padding: 1.5rem 2rem;
+    }
+
+    .title-container {
+        margin-bottom: -.5rem;
+    }
+
+    .projects-container {
         grid-template-columns: 1fr;
         padding: 2rem 1rem;
         margin: 20px 8px 0px 8px;
