--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,126 +1,124 @@
 .skills-section {
-    margin: 45px 12px 0px 12px;
-    padding: 50px 0;
-    background-color: #f9f9f9; 
-    border-radius: 15px;
-  }
-  
-  .container {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
-  
-  .category {
-    margin-bottom: 30px;
-  }
+  margin: 45px 12px 0px 12px;
+  padding: 50px 0;
+  background-color: #f9f9f9; 
+  border-radius: 15px;
+}
 
-  h2{
-    font-size: 35px;
-  }
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
 
-  @media (prefers-color-scheme: dark) {
-    h2{
-        color: black;
-    }
+.category {
+  margin-bottom: 30px;
+}
+
+h2 {
+  font-size: 35px;
+}
+
+@media (prefers-color-scheme: dark) {
+  h2 {
+      color: black;
   }
-  
-  .category h3 {
-    font-size: 28px;
-    margin-bottom: 10px;
-    color: #333; /* Couleur de texte sombre */
-  }
-  
+}
+
+.category h3 {
+  font-size: 28px;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.skills-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.skill {
+  width: calc(25% - 20px);
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  display: flex;
+  align-items: center;
+}
+
+.skill:hover {
+  transform: translateY(-5px);
+}
+
+.skill svg {
+  width: 32px;
+  height: 32px;
+}
+
+.skill span {
+  font-size: 18px;
+  margin-left: 10px;
+  color: #555;
+}
+
+.html-icon {
+  color: rgba(255, 166, 0, 0.774);
+}
+
+.css-icon {
+  color: rgba(0, 0, 255, 0.772);
+}
+
+.js-icon {
+  color: rgb(255, 230, 0);
+}
+
+.react-icon {
+  color: rgba(0, 255, 255, 0.847);
+}
+
+.sass-icon {
+  color: pink;
+}
+
+.node-icon {
+  color: green;
+}
+
+.mongodb-icon {
+  color: #13aa52;
+}
+
+.express-icon {
+  color: #6e4e4e;
+}
+
+.seo-icon {
+  color: purple;
+}
+
+.debug-icon {
+  color: red;
+}
+
+@media (max-width: 768px) {
   .skills-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; /* Centrer les compétences horizontalement */
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
   }
-  
+
   .skill {
-    width: calc(25% - 20px); /* 25% de largeur pour chaque boîte de compétence avec espacement */
-    margin-right: 20px;
-    margin-bottom: 20px;
-    padding: 20px; /* Augmentation de l'espacement intérieur */
-    background-color: #fff; /* Fond blanc */
-    border-radius: 10px; /* Coins arrondis */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Ombre légère */
-    transition: transform 0.3s ease; /* Animation de transformation */
-    display: flex;
-    align-items: center;
-  }
-  
-  .skill:hover {
-    transform: translateY(-5px); /* Légère élévation au survol */
-  }
-  
-  .skill svg {
-    width: 32px; /* Taille d'icône légèrement augmentée */
-    height: 32px;
-  }
-  
-  .skill span {
-    font-size: 18px;
-    margin-left: 10px; /* Espacement entre l'icône et le texte */
-    color: #555; /* Couleur de texte légèrement plus sombre */
-  }
-  
-  /* Couleurs personnalisées pour chaque icône */
-  .html-icon {
-    color: rgba(255, 166, 0, 0.774); /* Couleur orange pour HTML5 */
-  }
-  
-  .css-icon {
-    color: rgba(0, 0, 255, 0.772); /* Couleur bleue pour CSS3 */
-  }
-  
-  .js-icon {
-    color: rgb(255, 230, 0); /* Couleur jaune pour JavaScript */
-  }
-  
-  .react-icon {
-    color: rgba(0, 255, 255, 0.847); /* Couleur cyan pour React */
-  }
-  
-  .sass-icon {
-    color: pink; /* Couleur rose pour Sass */
-  }
-  
-  .node-icon {
-    color: green; /* Couleur verte pour Node.js */
-  }
-  
-  .mongodb-icon {
-    color: #13aa52; /* Couleur verte foncée pour MongoDB */
-  }
-  
-  .express-icon {
-    color: #6e4e4e; /* Couleur marron pour Express */
-  }
-  
-  .seo-icon {
-    color: purple; /* Couleur violette pour SEO */
-  }
-  
-  .debug-icon {
-    color: red; /* Couleur rouge pour Debugging */
-  }
-  
-  @media (max-width: 768px) {
-    .skills-list {
-      justify-content: center; /* Centrer les compétences horizontalement sur les écrans plus petits */
-      flex-direction: column; /* Disposition verticale des compétences sur les écrans plus petits */
-      align-items: center; /* Centrer les compétences verticalement */
-    }
-  
-    .skill {
-      width: calc(50% - 20px); /* Deux compétences par ligne avec espacement sur les écrans plus petits */
+      width: calc(50% - 20px);
       margin-bottom: 20px;
-    }
-  
-    .skill svg {
-      width: 28px; /* Taille d'icône réduite pour les écrans plus petits */
-      height: 28px;
-    }
   }
-  
+
+  .skill svg {
+      width: 28px;
+      height: 28px;
+  }
+}
