--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -1,3 +1,58 @@
-#contact{
+#contact {
     margin: 45px 12px 0px 12px;
+    padding: 20px;
+    background-color: #f5f5f5;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+form {
+    width: 100%;
+    margin: 30px 0; 
+    padding: 0 20px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label{
+    font-size: 18px;
+    color: black;
+    font-weight: 500;
+}
+
+input[type="text"],
+textarea {
+    width: calc(100% - 40px);
+    max-width: 500px; 
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+input[type="submit"] {
+    background-color: #2ecc71;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+    background-color: #27ae60;
+}
+
+@media (max-width: 768px) {
+    input[type="text"],
+    textarea {
+        width: calc(100% - 20px); 
+    }
 }
